# m365_MQTT

./: Cargo.toml
examples/: get_scooter_status.rs
executables_Rpi/: get_scooter_status  mi-token.txt  register
sample_test/rest_server/: Cargo.toml
sample_test/rest_server/src/: main.rs
